<resources>
    <string name="app_name">DeborahAmaPaintsil_WeatherApp</string>
    <string name="weather_app">Weather App</string>
    <string name="home">Home</string>
    <string name="location">Location</string>
    <string name="About">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="location_fragment">Location Fragment</string>
    <string name="about_fragment">About Fragment\n</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="settings_fragment">Settings Fragment\n</string>
    <string name="help_fragment">Help fragment\n</string>
    <string name="search">Search\n</string>
    <string name="search_fragment">Search Fragment\n</string>
    <string name="welcome_app">Welcome App</string>
    <string name="get_updated_with_the_weather">Get Updated With The Weather</string>
    <string name="get_started">Get Started</string>
    <string name="glasgow">Glasgow</string>
    <string name="updating">Updating</string>
    <string name="temperature">Temperature:</string>
    <string name="weather_condition">Weather Condition:</string>
    <string name="date">Date:</string>
    <string name="wind_value">Wind value:</string>
    <string name="wind_direction">Wind Direction</string>
    <string name="humidity_value">Humidity value:</string>
    <string name="humidity">Humidity</string>
    <string name="pollution_value">Pollution value:</string>
    <string name="pollution">Pollution</string>
    <string name="today">Today</string>
    <string name="_3_days_forecast">3 Days Forecast</string>
    <string name="min_temperature">Min Temperature:</string>
    <string name="max_temperature">Max Temperature:</string>
    <string name="sunrise_time">Sunrise Time</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset\n</string>
    <string name="sunset_time">Sunset Time</string>
    <string name="georrs_point">Georrs Point</string>
    <string name="copyright_info">Copyright info</string>
    <string name="min_temp">Min temp</string>
    <string name="max_temp">Max temp</string>
    <string name="Detailed_fragment">Detailed Fragment\n</string>
    <string name="Forecastify">Forecastify</string>
    <string name="second_screen_title">Screen title</string>
    <string name="second_screen_description">description</string>
    <string name="skip">skip</string>
    <string name="long_text">"Welcome to Forecastify, your personalized weather companion. Stay ahead of the weather with accurate forecasts tailored to the 6 GCU campus locations.  "</string>
    <string name="Next">Next</string>
    <string name="Weather">Weather</string>
    <string name="cityname">\n\nCITY\nNAME</string>
    <string name="temperatureC">Temperature</string>
    <string name="search_city">Search For City</string>
    <string name="temperatureDegree">°C(°F)</string>
    <string name="dateDay">Forecast</string>
    <string name="dateTime">Date</string>
    <string name="about">About Weather App</string>
    <string name="welcome">Welcome to Forecastify, your go-to source for accurate and up-to-date weather information! Our app is designed to provide you with reliable forecasts, current weather conditions, and essential weather-related data for locations worldwide.</string>
    <string name="key_features">Key Features</string>
    <string name="detailed">• Detailed 3-day weather forecasts\n• Current weather observations\n• Easy navigation between locations\n• Customization settings for update intervals and units</string>
    <string name="developer">Developer</string>
    <string name="weather_app_forecastiy">Forecastify is developed by Deborah Ama Paintsil, a team dedicated to delivering high-quality mobile applications for weather enthusiasts. We strive to continuously improve our app and provide the best user experience possible.</string>
    <string name="contact_us">Contact Us</string>
    <string name="feedback">Have feedback or questions? We\'d love to hear from you! Contact us at viewweather@gmail.com.</string>
    <string name="thank_you">Thank you for choosing Our Weather App!</string>
    <string name="weather_information">The weather information provided in this app is sourced from RSS Feeds provided by BBC Weather. We acknowledge and appreciate their data sharing. Proper acknowledgment and referencing of BBC Weather as the source of weather information is encouraged.</string>
    <string name="boarding2">Whether you\'re planning a weekend getaway or just stepping out for a coffee, Forecastify has you covered. Get real-time updates on temperature, humidity, and precipitation, so you\'re always prepared for whatever the day brings.</string>
    <string name="boarding3">Let Forecastify be your guide to weather confidence, rain or shine.</string>
    <string name="let_s_go">let\'s Go!!</string>
    <string name="boarding4">Experience the power of weather knowledge in the palm of your hand with Forecastify. Let\'s dive in and explore the world of weather together!</string>
</resources>