<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/platinum"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/weatherInfoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="32dp"
                android:background="@drawable/rounded_bottom_border">

                <TextView
                    android:id="@+id/cityTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text="@string/Weather"
                    android:textColor="@color/white"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/weatherImageCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/weatherIconImageView"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:paddingEnd="8dp"
                        android:src="@drawable/homeima" />

                    <TextView
                        android:id="@+id/cityNameTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:text="@string/cityname"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/dateDayTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dateDay"
                    android:textColor="@color/white"
                    android:paddingTop="8dp"
                    android:textSize="24sp"/>

                <TextView
                    android:id="@+id/dateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dateTime"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:layout_marginBottom="16dp"/>

                <TextView
                    android:id="@+id/temperatureTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temperatureC"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:paddingTop="8dp" />

                <TextView
                    android:id="@+id/temperatureValueTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temperatureDegree"
                    android:textColor="@color/white"
                    android:textSize="36sp"
                    android:paddingTop="8dp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp">

                <Button
                    android:id="@+id/searchCityButton"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/search_city"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:background="@drawable/home_button"
                    android:paddingStart="24dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="24dp"
                    android:paddingBottom="12dp"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
