<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/platinum"
    tools:context=".Onboarding4Fragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="337dp"
                android:layout_gravity="center"
                android:layout_marginBottom="34dp"
                android:src="@drawable/onboarding4" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                android:padding="16dp"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_below="@id/imageView"
                android:background="@drawable/rounded_onboarding">

                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Forecastify"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_marginBottom="16dp" />

                <TextView
                    android:id="@+id/descriptionTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/let_s_go"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_marginBottom="32dp" />

                <TextView
                    android:id="@+id/longTextTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/boarding4"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_marginBottom="32dp" />

                <Button
                    android:id="@+id/startMainButton"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button"
                    android:paddingStart="24dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="24dp"
                    android:paddingBottom="12dp"
                    android:text="Lets Start"
                    android:textAllCaps="false"
                    android:textColor="@color/midnight_blue" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="s2110986"
                android:textSize="10sp"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
    <!--
         Name: Deborah Ama Paintsil
         Student ID: s2110986
     -->
